add dispersion example

--- a/05-advection-ETBS-LW.ipynb
+++ b/05-advection-ETBS-LW.ipynb
@@ -20,14 +20,14 @@
    "outputs": [],
    "source": [
     "c = 1.0 # advection speed\n",
-    "T = 0.5 # end time\n",
+    "T = 1.0 # end time\n",
     "\n",
     "nx = 100 # spacial size\n",
     "x = np.linspace(0, 1, nx, endpoint=False)\n",
     "hx = x[1] - x[0]\n",
     "xx = np.linspace(0, 1, 1000, endpoint=False)\n",
     "\n",
-    "gamma = 0.3\n",
+    "gamma = 0.1\n",
     "ht = hx * gamma / c\n",
     "nt = int(T/ht)\n",
     "\n",
@@ -41,7 +41,7 @@
     "    return np.exp(-100*(x-0.5)**2)\n",
     "\n",
     "def sinusoidal(x):\n",
-    "    k = 10\n",
+    "    k = 4\n",
     "    return np.sin(k * np.pi * x)\n",
     "\n",
     "def hump(x):\n",
@@ -50,7 +50,7 @@
     "    u[I] = -100 * (x[I]-0.2) * (x[I]-0.4)\n",
     "    return u\n",
     "\n",
-    "uinit = hump"
+    "uinit = sinusoidal"
    ]
   },
   {
@@ -60,7 +60,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(xx, uinit(xx), lw=3, clip_on=False)"
+    "plt.plot(xx, uinit(xx), lw=3, clip_on=False)\n",
+    "plt.plot(x, uinit(x), lw=3, clip_on=False)"
    ]
   },
   {
@@ -83,7 +84,7 @@
     "         + (gamma**2 / 2.0) * (u[Jp1] - 2 * u[J] + u[Jm1])\n",
     "    \n",
     "    uexact = uinit((xx - c * tstep * ht) % 1.0)\n",
-    "    if tstep % 10 == 0:\n",
+    "    if tstep % 100000 == 0:\n",
     "        plt.plot(x, u, lw=0.5, color='tab:red')\n",
     "    \n",
     "plt.plot(xx, uexact)\n",
