--- a/05-dispersion-and-dissipation.ipynb
+++ b/05-dispersion-and-dissipation.ipynb
@@ -93,7 +93,7 @@
    "source": [
     "s_ETBS = gamma * np.exp(-1j*ks*hx) + (1-gamma)\n",
     "\n",
-    "omega_ETBS = 1j*np.log(s_ETBS)/dt"
+    "omega_ETBS = 1j*np.log(s_ETBS)/ht"
    ]
   },
   {
@@ -127,7 +127,7 @@
     "    + np.exp(-1j*ks*hx) * (gamma/2 + gamma**2/2)\n",
     "    )\n",
     "\n",
-    "omega_LW = 1j*np.log(s_LW)/dt"
+    "omega_LW = 1j*np.log(s_LW)/ht"
    ]
   },
   {
