--- a/05-advection-ETBS-LW.ipynb
+++ b/05-advection-ETBS-LW.ipynb
@@ -22,12 +22,12 @@
     "c = 1.0 # advection speed\n",
     "T = 1.0 # end time\n",
     "\n",
-    "nx = 100 # spacial size\n",
+    "nx = 1000 # spacial size\n",
     "x = np.linspace(0, 1, nx, endpoint=False)\n",
     "hx = x[1] - x[0]\n",
     "xx = np.linspace(0, 1, 1000, endpoint=False)\n",
     "\n",
-    "gamma = 0.1\n",
+    "gamma = 0.05\n",
     "ht = hx * gamma / c\n",
     "nt = int(T/ht)\n",
     "\n",
@@ -41,7 +41,7 @@
     "    return np.exp(-100*(x-0.5)**2)\n",
     "\n",
     "def sinusoidal(x):\n",
-    "    k = 4\n",
+    "    k = 6\n",
     "    return np.sin(k * np.pi * x)\n",
     "\n",
     "def hump(x):\n",
@@ -78,10 +78,10 @@
     "u = uinit(x)\n",
     "for tstep in range(1, nt+1):\n",
     "    \n",
-    "    #u[J] = u[J] - gamma * (u[J] - u[Jm1])\n",
+    "    u[J] = u[J] - gamma * (u[J] - u[Jm1])\n",
     "    \n",
-    "    u[J] = u[J] - (gamma / 2.0) * (u[Jp1] - u[Jm1]) \\\n",
-    "         + (gamma**2 / 2.0) * (u[Jp1] - 2 * u[J] + u[Jm1])\n",
+    "    #u[J] = u[J] - (gamma / 2.0) * (u[Jp1] - u[Jm1]) \\\n",
+    "    #     + (gamma**2 / 2.0) * (u[Jp1] - 2 * u[J] + u[Jm1])\n",
     "    \n",
     "    uexact = uinit((xx - c * tstep * ht) % 1.0)\n",
     "    if tstep % 100000 == 0:\n",
