--- a/06-burgers-LF-template.ipynb
+++ b/06-burgers-LF-template.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5af539f-b704-4e1f-8ad7-4cfd71bebd76",
+   "id": "aaa00016-a7be-4517-8696-965118b4d5e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,15 +15,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7241d6f-ee52-4961-b394-959175d34941",
+   "id": "2a01f34a-d55f-4082-8f50-760e15ba40b9",
    "metadata": {},
    "outputs": [],
    "source": [
     "T = 1.0 # end time\n",
     "\n",
-    "nx = 1000 # spacial size\n",
-    "x = np.linspace(0, 1, nx, endpoint=False)\n",
-    "hx = x[1] - x[0]\n",
+    "nx = 100 # number of cells\n",
+    "hx = (1/nx)/2\n",
+    "\n",
+    "x = np.linspace(hx, 1, nx, endpoint=False)\n",
+    "#plt.plot(x, 0*x, 'go')\n",
+    "#plt.plot(x-(1/nx/2), 0*x, 'b|')\n",
+    "#plt.plot(x+(1/nx/2)+5e-3, 0*x, 'b|')\n",
     "xx = np.linspace(0, 1, 1000, endpoint=False)\n",
     "\n",
     "gamma = 0.95\n",
@@ -36,22 +40,9 @@
     "print(f'    ht = {ht}')\n",
     "print(f' gamma = {gamma}')\n",
     "\n",
-    "def pulse(x):\n",
-    "    return np.exp(-100*(x-0.5)**2)\n",
-    "\n",
-    "def sinusoidal(x):\n",
-    "    k = 6\n",
-    "    return np.sin(k * np.pi * x)\n",
-    "\n",
-    "def hump(x):\n",
-    "    u = np.zeros_like(x)\n",
-    "    I = np.where((x>=0.2) & (x<=0.4))[0]\n",
-    "    u[I] = -100 * (x[I]-0.2) * (x[I]-0.4)\n",
-    "    return u\n",
-    "\n",
     "def square(x):\n",
     "    u = np.zeros(x.shape)\n",
-    "    u[np.where((x>0.4) & (x<0.6))[0]] = 1.0\n",
+    "    u[np.where((x>0.05) & (x<0.4))[0]] = 1.0\n",
     "    return u\n",
     "\n",
     "uinit = square"
@@ -60,18 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08abb6e4-4e55-42c2-9434-0b2eeae8bd91",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(xx, uinit(xx), lw=3, clip_on=False)\n",
-    "plt.plot(x, uinit(x), lw=3, clip_on=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9f2759ed-3268-427b-b87b-77add8a958f8",
+   "id": "3dd02623-c5c9-42ae-b360-ee333bc57508",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,20 +69,17 @@
     "    return u\n",
     "\n",
     "for tstep in range(1, nt+1):\n",
-    "    \n",
-    "    #u[J] = u[J] - gamma * u[J] * (u[J] - u[Jm1])\n",
-    "    \n",
+    "        \n",
     "    uplus = u[Jp1]\n",
     "    uminus = u[J]\n",
-    "    alpha = np.maximum(np.abs(fprime(uplus)),\n",
-    "                       np.abs(fprime(uminus)))\n",
-    "    fluxes = (f(uplus)+f(uminus))/2 - alpha/2*(uplus-uminus)\n",
-    "    rhs = - 1/hx*(fluxes[J]-fluxes[Jm1])\n",
-    "\n",
-    "    ht = hx*gamma/np.max(fprime(np.abs(u)))\n",
-    "    u[:] = u + ht*rhs\n",
     "    \n",
-    "    if tstep % 100 == 0:\n",
+    "    alpha = # FIXME\n",
+    "    \n",
+    "    flux = # FIXME\n",
+    "\n",
+    "    u[:] = # FIXME\n",
+    "    \n",
+    "    if tstep % 10 == 0:\n",
     "        plt.plot(x, u, lw=0.5, color='tab:red')\n",
     "    \n",
     "plt.plot(x, u, color='tab:red', lw=2)"
@@ -111,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30b8874e-362d-46bf-bfd0-33e1a14e4373",
+   "id": "f4c4ee36-7105-4689-8a37-f9b331884702",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -119,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56042723-9bba-4d1c-82c0-b8910d888620",
+   "id": "656c3562-c44d-465e-84c9-9d29b23caa48",
    "metadata": {},
    "outputs": [],
    "source": []
