update template/add py

--- a/06-burgers-LF-template.ipynb
+++ b/06-burgers-LF-template.ipynb
@@ -72,11 +72,10 @@
     "        \n",
     "    uplus = u[Jp1]\n",
     "    uminus = u[J]\n",
-    "    \n",
-    "    alpha = # FIXME\n",
-    "    \n",
-    "    flux = # FIXME\n",
-    "\n",
+    "    alpha = np.maximum(np.abs(fprime(uplus)),\n",
+    "                       np.abs(fprime(uminus)))\n",
+    "    fluxes = (f(uplus)+f(uminus))/2 - alpha/2*(uplus-uminus)\n",
+    "    #      = f^*_{k+1/2} for k=0, ..., n\n",
     "    u[:] = # FIXME\n",
     "    \n",
     "    if tstep % 10 == 0:\n",
