add plotly show

--- a/08-fe-assembly.ipynb
+++ b/08-fe-assembly.ipynb
@@ -22,6 +22,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f2281c06-8d2f-4d78-8d91-f7ee4c42a45c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!wget https://raw.githubusercontent.com/lukeolson/cs555-demos/main/mesh.e\n",
+    "!wget https://raw.githubusercontent.com/lukeolson/cs555-demos/main/mesh.v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "cce58e0a-6a3f-40ca-8d49-aeb05052819a",
    "metadata": {},
    "outputs": [],
@@ -203,7 +214,8 @@
    "source": [
     "fig = ff.create_trisurf(x=X, y=Y, z=u,\n",
     "                        simplices=E)\n",
-    "py.iplot(fig, filename='surf')"
+    "py.iplot(fig, filename='surf')\n",
+    "fig.show(renderer=\"colab\")"
    ]
   },
   {
