--- a/05-advection-1d-template.ipynb
+++ b/05-advection-1d-template.ipynb
@@ -61,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nx = 128\n",
+    "nx = 32\n",
     "x = np.linspace(0, 1, nx, endpoint=False)\n",
     "hx = x[1] - x[0]\n",
     "xx = np.linspace(0, 1, 100, endpoint=False)\n",
@@ -192,14 +192,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "error = np.ones(len(u))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "l2err = np.sqrt(hx * np.sum(error**2))\n",
+    "print(l2err)"
+   ]
   },
   {
    "cell_type": "code",
