--- a/05-advection-1d.ipynb
+++ b/05-advection-1d.ipynb
@@ -13,8 +13,7 @@
     "import matplotlib\n",
     "matplotlib.rcParams['animation.embed_limit'] = 2**28\n",
     "from matplotlib import animation\n",
-    "from IPython.display import HTML\n",
-    "from common import set_figure"
+    "from IPython.display import HTML"
    ]
   },
   {
@@ -67,7 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nx = 64\n",
+    "nx = 128\n",
     "x = np.linspace(0, 1, nx, endpoint=False)\n",
     "hx = x[1] - x[0]\n",
     "xx = np.linspace(0, 1, 100, endpoint=False)\n",
@@ -92,7 +91,10 @@
     "    u[np.intersect1d(np.where(x>0.4), np.where(x<0.6))] = 1.0\n",
     "    return u\n",
     "\n",
-    "f = square"
+    "def pulse(x):\n",
+    "    return np.exp(-(x-0.5)**2 / .01)\n",
+    "\n",
+    "f = pulse"
    ]
   },
   {
@@ -101,7 +103,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(x, f(x), lw=3, clip_on=False)"
+    "plt.plot(x, f(x), lw=3, clip_on=False)\n",
+    "plt.show()"
    ]
   },
   {
@@ -136,7 +139,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lmbda = 0.05\n",
+    "lmbda = 0.95\n",
     "ht = hx * lmbda / c\n",
     "nt = int(T/ht)\n",
     "print(f'     T = {T}')\n",
@@ -177,10 +180,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import time\n",
-    "\n",
     "method = 'ETBS'\n",
     "\n",
+    "err = np.zeros((nt+1, nx))\n",
     "u = f(x)\n",
     "\n",
     "fig, ax = plt.subplots()\n",
@@ -210,7 +212,7 @@
     "        \n",
     "    line1.set_data(xx, uexact)\n",
     "    line2.set_data(x, u)\n",
-    "    \n",
+    "    err[n+1, :] = f((x - c * (n+1) * ht) % 1.0)\n",
     "    return line1, line2\n",
     "\n",
     "ani = animation.FuncAnimation(fig, timestepper, \n",
@@ -246,6 +248,41 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -264,7 +301,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
