--- a/06-advection-general.ipynb
+++ b/06-advection-general.ipynb
@@ -109,12 +109,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d7012f8c-f5a2-4046-a1bd-ac1b194cb389",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_tv(u):\n",
+    "    return np.sum(np.abs(u[K]-u[Km1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "266e2d73-8dd3-4f51-aea4-f278c3d3c5ea",
    "metadata": {},
    "outputs": [],
    "source": [
+    "TV = []\n",
     "method = 'linear'\n",
-    "sigtype = 'BW'\n",
+    "sigtype = 'superbee'\n",
     "u = u0.copy()\n",
     "def init():\n",
     "    return (uline,)  \n",
@@ -123,6 +135,7 @@
     "        uline.set_data(x, u)\n",
     "        txt.set_text('t=0, i=0')\n",
     "        ax.axis([0, 1, -0.25, 1.25])\n",
+    "        TV.append(calculate_tv(u))\n",
     "        return (uline,) \n",
     "\n",
     "    if method == 'constant':\n",
@@ -161,6 +174,7 @@
     "        u[K] = u[K] - (c(x[K]) * ht / hx) * (u[K] - u[Km1])\\\n",
     "                    - (c(x[K]) * ht / (2.0 * hx)) * (sig[K] - sig[Km1])\\\n",
     "                                                  * (hx - c(x[K]) * ht)\n",
+    "    TV.append(calculate_tv(u))\n",
     "    uline.set_data(x, u)\n",
     "    txt.set_text(f't={n*ht}, i={n}')\n",
     "    ax.axis([0, 1, -0.25, 1.25])\n",
@@ -179,6 +193,18 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "493a865c-bb0a-4f59-84e4-873986e7ef6d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(TV, 'ko')\n",
+    "plt.xlabel('timestep')\n",
+    "plt.ylabel('total variation')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5ca931a-799b-41c6-b7c3-94c069b99265",
    "metadata": {},
    "outputs": [],
    "source": []
