--- a/04_fem_assembly_1d.ipynb
+++ b/04_fem_assembly_1d.ipynb
@@ -34,7 +34,8 @@
    "outputs": [],
    "source": [
     "def f(x):\n",
-    "    u = np.exp(-100 * (x - 0.25)**2)\n",
+    "    #u = np.exp(-100 * (x - 0.25)**2)\n",
+    "    u = np.ones_like(x)\n",
     "    return u\n",
     "\n",
     "def kappa(x):\n",
@@ -74,8 +75,12 @@
     "    for e in range(0, nel):\n",
     "        AA = np.array([[ 1/h, -1/h],\n",
     "                       [-1/h,  1/h]])\n",
-    "        ff = np.array([h/2, h/2])\n",
-    "\n",
+    "        #ff = np.array([h/2, h/2])       \n",
+    "        t = 0.5\n",
+    "        ff0 = f(h * t + x[e])*(1-t)*h\n",
+    "        ff1 = f(h * t + x[e])*(t)*h\n",
+    "        ff = np.array([ff0, ff1])\n",
+    "        \n",
     "        if e == 0:\n",
     "            AA[:,0] = 0\n",
     "            AA[0,:] = 0\n",
@@ -83,7 +88,6 @@
     "        \n",
     "        A[e:e+2, e:e+2] += AA\n",
     "        rhs[e:e+2] += ff\n",
-    "    print(A)\n",
     "    A = A[1:, 1:]\n",
     "    rhs = rhs[1:]\n",
     "    return A, rhs"
@@ -132,17 +136,44 @@
     "    rhsref = np.array([2, 2, 1])\n",
     "    np.testing.assert_array_almost_equal(mesh.h*A, Aref)\n",
     "    np.testing.assert_array_almost_equal(2*rhs/mesh.h, rhsref)\n",
-    "    \n",
-    "test1()"
+    "\n",
+    "@mytest\n",
+    "def test2():\n",
+    "    def f(x):\n",
+    "        return (np.pi**2/4)*np.sin(np.pi*x/2)\n",
+    "    kappa = lambda x: 1\n",
+    "    def uexact(x):\n",
+    "        return np.sin(np.pi*x/2)\n",
+    "\n",
+    "    e0 = 1\n",
+    "    for nel in [8, 16, 32, 64, 128]:\n",
+    "        mesh = Mesh(nel)\n",
+    "        A, rhs = assemble(mesh, f, kappa)\n",
+    "        u = np.linalg.solve(A, rhs)\n",
+    "        e = gnorm(mesh, u - uexact(mesh.x[1:]))\n",
+    "        ratio = e0/e\n",
+    "        e0 = e\n",
+    "    assert ratio > 3.5\n",
+    "\n",
+    "test1()\n",
+    "test2()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1c653e4-a42b-4be7-9950-1e5e9c5ac8b6",
+   "id": "1e9a9fa2-31f9-4c66-98e4-70e35aa160b1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mesh = Mesh(200)\n",
+    "def f(x):\n",
+    "    return (np.pi**2/4)*np.sin(np.pi*x/2)\n",
+    "A, rhs = assemble(mesh, f, kappa)\n",
+    "u = np.linalg.solve(A, rhs)\n",
+    "plt.plot(mesh.x[1:], u)\n",
+    "plt.plot(mesh.x[1:], np.sin(np.pi*mesh.x[1:]/2))"
+   ]
   }
  ],
  "metadata": {
