--- a/hw3_dam_breaking_2D.ipynb
+++ b/hw3_dam_breaking_2D.ipynb
@@ -137,12 +137,12 @@
     "u_T1, mass = solve(x, y, T1)\n",
     "plot_solution(x, y, u_T1, name='shallow_wave_2D_T1')\n",
     "\n",
-    "#T2   = 3\n",
-    "#u_T2, mass = solve(x, y, T1)\n",
-    "#plot_solution(x, y, u_T2, name='shallow_wave_2D_T2')\n",
+    "T2   = 3\n",
+    "u_T2, mass = solve(x, y, T1)\n",
+    "plot_solution(x, y, u_T2, name='shallow_wave_2D_T2')\n",
     "\n",
-    "# Confirm that mass is conserved! plot mass\n",
-    "# IMPLEMENT ME!\n"
+    "#Confirm that mass is conserved! plot mass\n",
+    "plt.plot( IMPLEMENT ME! )\n"
    ]
   }
  ],
