--- a/hw3_dam_breaking_2D.ipynb
+++ b/hw3_dam_breaking_2D.ipynb
@@ -49,7 +49,7 @@
     "     # IMPLEMENT ME!\n",
     "    return u\n",
     "\n",
-    "def flux_f(vec, g):\n",
+    "def flux_f(u, g):\n",
     "    \"\"\"\n",
     "    Velocity flux function.\n",
     "    \"\"\"\n",
@@ -57,7 +57,7 @@
     "    flux =  # IMPLEMENT ME!\n",
     "    return flux\n",
     "\n",
-    "def flux_g(vec, g):\n",
+    "def flux_g(u, g):\n",
     "    \"\"\"\n",
     "    Velocity flux function.\n",
     "    \"\"\"\n",
