add convergence study code

--- a/08-fe-assembly-quadratics-template.ipynb
+++ b/08-fe-assembly-quadratics-template.ipynb
@@ -313,6 +313,70 @@
     "py.iplot(fig, filename='surf')\n",
     "fig.show(renderer=\"colab\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7bb37732-098c-4f8d-8613-88a04c76248e",
+   "metadata": {},
+   "source": [
+    "# Test your code with a specific `kappa` and `f` to verify correctness and convergence rate."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe7bff84-964b-40fa-be4e-9dc308826725",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def kappa(x, y):\n",
+    "    return 1.0\n",
+    "\n",
+    "def f(x, y):\n",
+    "     # Infer from uxact(x,y)\n",
+    "    pass\n",
+    "\n",
+    "def uexact(x, y):\n",
+    "    return (np.sin(np.pi*x)*np.sin(np.pi*y))/(2*np.pi**2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26079eaa-4e92-4b7a-baf1-bb5c244eb0bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "l2_error = []\n",
+    "for ref in range(0, 3):\n",
+    "\n",
+    "  V = np.loadtxt('mesh.v')\n",
+    "  E = np.loadtxt('mesh.e', dtype=int)\n",
+    "\n",
+    "  # refine mesh\n",
+    "  t = tri.Triangulation(V[:, 0], V[:, 1], E)\n",
+    "  mesh = tri.UniformTriRefiner(t)\n",
+    "  t = mesh.refine_triangulation(subdiv=ref)\n",
+    "  V = np.vstack([t.x, t.y]).T\n",
+    "  E = t.triangles\n",
+    "  print(V.shape, E.shape)\n",
+    "\n",
+    "  V2, E2, edges2 = generate_quadratic(V, E, return_edges=True)\n",
+    "  X, Y = V2[:, 0], V2[:, 1]\n",
+    "  # plt.triplot(X, Y, E2[:, :3])\n",
+    "  # plt.show()\n",
+    "\n",
+    "  # solve on the problem on refined mesh\n",
+    "  # FIXME\n",
+    "\n",
+    "  # Compute error (u-uexact)\n",
+    "  # FIXME\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Plot error vs mesh-size. Please label the axes clearly."
+   ]
   }
  ],
  "metadata": {
@@ -331,7 +395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
