--- a/polynomial-approximation-template.ipynb
+++ b/polynomial-approximation-template.ipynb
@@ -2,35 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "85a76923-893d-490b-9029-a86f86951040",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from scipy.special import legendre\n",
+    "from scipy.special import legendre, roots_legendre\n",
     "from scipy.interpolate import lagrange\n",
     "import matplotlib.pyplot as plt\n",
-    "import modepy\n",
     "from functools import partial"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6d110464-5f56-448e-9bd1-fdb1e2a90a26",
-   "metadata": {},
-   "source": [
-    "What does this do, how accurate is it?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "36da9058-3358-44ab-9b3a-21d891a4dc27",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "quad = modepy.quadrature.jacobi_gauss.LegendreGaussQuadrature(10)"
    ]
   },
   {
@@ -102,7 +83,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
