--- a/06-burgers-LF.ipynb
+++ b/06-burgers-LF.ipynb
@@ -2,22 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "aaa00016-a7be-4517-8696-965118b4d5e6",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib.animation import FuncAnimation\n",
+    "plt.rcParams[\"animation.html\"] = \"jshtml\"\n",
+    "%config InlineBackend.figure_format = 'retina'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "2a01f34a-d55f-4082-8f50-760e15ba40b9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     T = 0.8\n",
+      "tsteps = 84\n",
+      "    hx = 0.00995\n",
+      "    ht = 0.0094525\n",
+      " gamma = 0.95\n"
+     ]
+    }
+   ],
    "source": [
     "T = 0.8 # end time   0.1 * 1/2 -> 0.05; so 0.4 -> 0.2\n",
     "\n",
@@ -41,7 +56,7 @@
     "print(f' gamma = {gamma}')\n",
     "\n",
     "def square(x):\n",
-    "    u = np.zeros(x.shape)\n",
+    "    u = np.zeros_like(x)\n",
     "    u[np.where((x>0.05) & (x<0.4))[0]] = 1.0\n",
     "    return u\n",
     "\n",
@@ -50,18 +65,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "3dd02623-c5c9-42ae-b360-ee333bc57508",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(figsize=(4, 2))\n",
+    "animateit = True\n",
+    "\n",
     "J = np.arange(0, nx)  # all vertices\n",
     "Jm1 = np.roll(J, 1)\n",
     "Jp1 = np.roll(J, -1)\n",
     "\n",
     "u = uinit(x)\n",
-    "plt.plot(x, u, lw=3, color='tab:blue')\n",
+    "\n",
+    "if animateit:\n",
+    "    U = [u.copy()]\n",
+    "else:\n",
+    "    fig, ax = plt.subplots(figsize=(4, 2))\n",
+    "    plt.plot(x, u, lw=3, color='tab:blue')\n",
     "\n",
     "def f(u):\n",
     "    return u**2/2\n",
@@ -78,36 +99,42 @@
     "    fluxes = (f(uplus)+f(uminus))/2 - alpha/2*(uplus-uminus)\n",
     "\n",
     "    u[:] = u - ht/hx*(fluxes[J]-fluxes[Jm1])\n",
-    "    \n",
-    "    if tstep % 10 == 0:\n",
-    "        ax.plot(x, u, lw=0.5, color='tab:red');\n",
     "\n",
-    "\n",
-    "ax.plot(x, u, color='tab:red', lw=2);"
+    "    if animateit:\n",
+    "        U.append(u.copy())\n",
+    "    else:\n",
+    "        if tstep % 10 == 0:\n",
+    "            ax.plot(x, u, lw=0.5, color='tab:red');"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4c4ee36-7105-4689-8a37-f9b331884702",
+   "id": "b839638f-88c8-4033-b928-6ec5eafc6038",
    "metadata": {},
    "outputs": [],
    "source": [
-    "alpha"
+    "if not animateit:\n",
+    "    ax.plot(x, u, color='tab:red', lw=2);\n",
+    "\n",
+    "if animateit:\n",
+    "    fig = plt.figure(figsize=(10,6))\n",
+    "    ax = fig.add_subplot()\n",
+    "def animate(t):\n",
+    "    ax.plot(x, U[t], color='tab:red', ls='-',linewidth = 0.5)\n",
+    "    ax.set_xlabel('x')\n",
+    "    ax.set_ylabel('y')\n",
+    "    ax.set_title(f\"Time step = {t}\")      \n",
+    "    return ax\n",
+    "\n",
+    "ani = FuncAnimation(fig, animate, frames=np.arange(0, nt+1), interval = 100, repeat = False)\n",
+    "ani"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "656c3562-c44d-465e-84c9-9d29b23caa48",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "23c137a1-891c-49c6-81ca-a02e53e2c317",
+   "id": "0a4056c1-bb80-4b00-88c0-9fbf738f121a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -129,7 +156,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
