--- a/06-burgers-LF.ipynb
+++ b/06-burgers-LF.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "aaa00016-a7be-4517-8696-965118b4d5e6",
    "metadata": {},
    "outputs": [],
@@ -17,22 +17,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "2a01f34a-d55f-4082-8f50-760e15ba40b9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     T = 0.8\n",
-      "tsteps = 84\n",
-      "    hx = 0.00995\n",
-      "    ht = 0.0094525\n",
-      " gamma = 0.95\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "T = 0.8 # end time   0.1 * 1/2 -> 0.05; so 0.4 -> 0.2\n",
     "\n",
@@ -65,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "3dd02623-c5c9-42ae-b360-ee333bc57508",
    "metadata": {},
    "outputs": [],
@@ -92,13 +80,7 @@
     "\n",
     "for tstep in range(1, nt+1):\n",
     "        \n",
-    "    uplus = u[Jp1]\n",
-    "    uminus = u[J]\n",
-    "    alpha = np.maximum(np.abs(fprime(uplus)),\n",
-    "                       np.abs(fprime(uminus)))\n",
-    "    fluxes = (f(uplus)+f(uminus))/2 - alpha/2*(uplus-uminus)\n",
-    "\n",
-    "    u[:] = u - ht/hx*(fluxes[J]-fluxes[Jm1])\n",
+    "    # FIXME!\n",
     "\n",
     "    if animateit:\n",
     "        U.append(u.copy())\n",
